--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,3 @@
-#openai
-#streamlit
-#langfuse
-#python-dotenv
-#pycaret
-#matplotlib
-#seaborn
-#numpy
-#boto3
-#requests
-
 streamlit>=1.24.0
 pandas>=1.5.0
 boto3>=1.26.0
@@ -16,7 +5,7 @@ pycaret>=3.0.0
 langfuse>=2.60.5
 python-dotenv>=1.0.0
 
-# (opcjonalnie, jeśli w notebooku/innym kodzie używasz)
+# Jeśli używasz w notebooku lub w innych skryptach:
 numpy>=1.24.0
 matplotlib>=3.7.0
 seaborn>=0.12.0
