--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,6 @@ streamlit>=1.24.0
 pandas>=1.5.0
 boto3>=1.26.0
 pycaret>=3.0.0
-langfuse>=2.60.5
 python-dotenv>=1.0.0
-
-# Jeśli używasz w notebooku lub w innych skryptach:
-numpy>=1.24.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-requests>=2.28.0
+langfuse>=2.60.5
+openai>=1.0.0
