--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environment
 .env
+.venv/
+env/
+venv/
+
+# IDE
+.vscode/
+*.code-workspace
+
+# Logs
 logs.log
-monitorowanie_modeli__langfuse.ipynb
-ostateczna.py
+*.log
+
+# Data and models
+*.csv
+*.pkl
+/dane/
+
+# Jupyter
+.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+
+# System files
+.DS_Store
+Thumbs.db
