--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit>=1.24.0
 pandas>=1.5.0
-boto3>=1.26.0
+plotly>=5.13.0
 pycaret>=3.0.0
 python-dotenv>=1.0.0
-langfuse>=2.60.5
 openai>=1.0.0
