--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,20 @@
-# Klucz API OpenAI - wymagany do działania aplikacji
-OPENAI_API_KEY=twój_klucz_api_openai
+# =============================================================================
+# PRZYKŁADOWA KONFIGURACJA ŚRODOWISKA
+# Skopiuj ten plik jako .env i wypełnij własnymi wartościami
+# =============================================================================
+
+# OpenAI API Key (wymagane)
+# Zarejestruj się na: https://platform.openai.com/
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Opcjonalne - Analytics/Monitoring
+# SENTRY_DSN=your_sentry_dsn_here
+# GOOGLE_ANALYTICS_ID=your_ga_id_here
+
+# Opcjonalne - Development
+# DEBUG=True
+# LOG_LEVEL=INFO
+
+# UWAGA: 
+# - Nie commituj pliku .env do repozytorium!
+# - W Streamlit Cloud dodaj secrets w panelu administracyjnym
