--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,93 +1,20 @@
-# =============================================================================
-# KONFIGURACJA PYPROJECT.TOML
-# Nowoczesna konfiguracja projektu Python
-# =============================================================================
-
-[build-system]
-requires = ["setuptools>=45", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "kalkulator-dla-biegaczy"
-version = "2.0.0"
-description = "Aplikacja do przewidywania czasu półmaratonu przy użyciu ML"
-authors = [
-    {name = "Alan Steinbarth", email = "alan.steinbarth@gmail.com"}
-]
-readme = "README.md"
-license = {file = "LICENSE"}
-requires-python = ">=3.9"
-keywords = ["machine-learning", "running", "prediction", "streamlit"]
-classifiers = [
-    "Development Status :: 4 - Beta",
-    "Intended Audience :: End Users/Desktop",
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Topic :: Scientific/Engineering :: Artificial Intelligence",
-]
-
-dependencies = [
-    "streamlit>=1.28.0",
-    "pandas>=2.0.0",
-    "numpy>=1.24.0",
-    "pycaret>=3.0.0",
-    "scikit-learn>=1.3.0",
-    "plotly>=5.17.0",
-    "openai>=1.0.0",
-    "python-dotenv>=1.0.0",
-    "joblib>=1.3.0",
-]
-
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.4.0",
-    "flake8>=6.0.0",
-    "black>=23.0.0",
-    "mypy>=1.5.0",
-    "pre-commit>=3.4.0",
-]
-
-[project.urls]
-Homepage = "https://github.com/AlanSteinbarth/Kalkulator-dla-biegaczy"
-Repository = "https://github.com/AlanSteinbarth/Kalkulator-dla-biegaczy"
-"Bug Tracker" = "https://github.com/AlanSteinbarth/Kalkulator-dla-biegaczy/issues"
-
 [tool.black]
-line-length = 88
-target-version = ['py39']
+line-length = 100
+target-version = ['py38', 'py39', 'py310']
 include = '\.pyi?$'
-extend-exclude = '''
-/(
-  # directories
-  \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | build
-  | dist
-)/
-'''
 
-[tool.flake8]
-max-line-length = 88
-extend-ignore = "E203, W503"
-per-file-ignores = [
-    "__init__.py:F401",
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 100
+
+[tool.pylint]
+max-line-length = 100
+disable = [
+    "C0111", # missing-docstring
+    "C0103", # invalid-name
+    "C0330", # bad-continuation
+    "C0326", # bad-whitespace
+    "R0903", # too-few-public-methods
+    "W0511", # fixme
 ]
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
-addopts = "-v --tb=short"
-
-[tool.mypy]
-python_version = "3.9"
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
