style: Poprawiono ciemny motyw sidebara i globalnej konfiguracji
🎨 Zmiany stylowania:
- Czarne tło sidebara (#0e1117) zamiast jasnego
- Force override dla wszystkich elementów sidebara
- Gradient styling metryk w sidebarze
- Ciemne stylowanie alertów, inputów, expanderów
- Biały tekst i nagłówki w sidebarze

⚙️ Konfiguracja globalna (.streamlit/config.toml):
- primaryColor: #667eea (niebieski)
- backgroundColor: #0e1117 (czarny)
- secondaryBackgroundColor: #262730 (ciemnoszary)
- textColor: #fafafa (biały)

Aplikacja ma teraz spójny, profesjonalny ciemny wygląd! 🌙

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -12,10 +12,11 @@ enableXsrfProtection = false
 gatherUsageStats = false
 
 [theme]
-primaryColor = "#FF4B4B"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F0F2F6"
-textColor = "#262730"
+# Ciemny motyw (dark mode)
+primaryColor = "#667eea"              # Niebieski kolor główny dla przycisków/linków
+backgroundColor = "#0e1117"           # Czarne tło główne
+secondaryBackgroundColor = "#262730"  # Ciemnoszare tło dla sidebara i elementów
+textColor = "#fafafa"                 # Biały tekst
 font = "sans serif"
 
 [client]
