✨ Kompleksowe naprawy i optymalizacje aplikacji
🔧 Naprawy główne:
- Naprawiona logika rozpoznawania płci w regex (kobietą -> K)
- Dodano obsługę formatu MM:SS dla tempa biegu
- Rozszerzone wzorce regex dla lepszego parsowania
- Naprawione błędy wcięć i składni

🎨 Jakość kodu:
- Pylint score: 10.00/10 (data_processing.py)
- Usunięte trailing whitespace
- Poprawiona kolejność importów (PEP 8)
- Usunięte niepotrzebne klauzule else
- Naprawione konflikty VSCode settings

🧪 Testy i funkcjonalność:
- Wszystkie testy jednostkowe przechodzą (5/5)
- Aktualizowane testy dla formatu MM:SS
- Zachowana pełna funkcjonalność aplikacji
- Streamlit działa na porcie 8510

💡 Szczegóły techniczne:
- Spójne funkcje parsowania w app.py i validation.py
- Naprawione importy datetime
- Dodano pylint disable dla import position
- Zachowana obsługa OpenAI i fallback do regex

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -15,7 +15,7 @@ gatherUsageStats = false
 # Ciemny motyw (dark mode)
 primaryColor = "#667eea"              # Niebieski kolor główny dla przycisków/linków
 backgroundColor = "#0e1117"           # Czarne tło główne
-secondaryBackgroundColor = "#262730"  # Ciemnoszare tło dla sidebara i elementów
+secondaryBackgroundColor = "#0e1117"  # To samo tło dla sidebara - ujednolicenie
 textColor = "#fafafa"                 # Biały tekst
 font = "sans serif"
 
