--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ numpy>=1.24.0
 # Machine Learning
 pycaret>=3.0.0
 scikit-learn>=1.3.0
+setuptools>=65.0.0  # Wymagane dla PyCaret w Python 3.12+
 
 # Wizualizacja
 plotly>=5.17.0
